--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
-        <script src="index.js"></script>
+        
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
 
+        <h1>BlackJack</h1>
+        <script src="index.js"></script>
     </body>
 </html>
