--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <body>
 
         <h1>BlackJack</h1>
+        <p id="message-el">Want to play a round?</p>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
+        <button id="start-game" onclick="startGame()">Start Game</button>
+        <button id="new-car" onclick="newCard()">New Card</button>
+        
+        
         <script src="index.js"></script>
     </body>
 </html>
